# spamscript

./: .gitignore  CMakeLists.txt  README.md
source/: Atlas.hpp  OriginalTextInput.cpp  OriginalTextInput.hpp  Replacer.cpp  Replacer.hpp  main.cpp
